[package]
name = "timer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[[bin]]
name = "rc-uc"
path = "./src/bin/rc_uc_hashmap.rs"
[[bin]]
name = "vec"
path = "./src/bin/vec_hashmap.rs"

[dependencies]
anyhow = "1.0.75"

chrono = "0.4.31"
rand = "0.8.5"

tracing = "0.1"
tracing-appender = "0.2"
tracing-subscriber = { version = "0.3", features = [
    "fmt",
    "std",
    "json",
    "time",
    "env-filter",
] }
